--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
